# dbt_ottawa_project

./: .gitignore  requirements.txt  run_production_pipeline.sh
dags/: dbt_pipeline_dag.py
jaffle_shop/: .user.yml  dbt_project.yml  profiles.yml  pyproject.toml
jaffle_shop/models/marts/: customers.sql  customers.yml  order_items.sql  order_items.yml  orders.sql  orders.yml
jaffle_shop/models/staging/: __sources.yml  stg_customers.sql  stg_locations.sql  stg_locations.yml  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_supplies.sql
